fix(accounts): remove a bottom margin from the auth pages
The signup/login link paragraph was adding an extra space at
the end of the section.

--- a/brasilcomvc/accounts/static/styl/accounts-auth.styl
+++ b/brasilcomvc/accounts/static/styl/accounts-auth.styl
@@ -15,6 +15,9 @@ body.accounts.signup
 	button
 		width 100%
 
+	p
+		margin 0
+
 	// GRID DEFINITION
 	+media-query( breakpoint_desktop )
 		#main-content > *
